# rddm-_j-bim

./: .cursorrules  .gitignore  1.query.md  1.query_completed.md  CadKernel コンポーネント.md  Graphics コンポーネント.md  README.md  UI コンポーネント.md  Window コンポーネント.md  dashboard.md  docker-compose.yml  project-definition.md  rddm-definition.md
docker/backend/: Dockerfile
docker/db/: Dockerfile  init.sql
docker/frontend/: Dockerfile  nginx.conf
docs/component/: component_communication.md  messaging_system.md
docs/deployment/: deployment_plan.md  update_delivery.md  version_control.md
docs/deployment/infrastructure/: backup_strategy.md
docs/error/: error_classification.md  error_handling.md  error_ui.md
docs/git/: branch-strategy.md  commit-rules.md
docs/mvp/: roadmap.md
docs/performance/: memory_limits.md  optimization_strategy.md  performance_requirements.md
docs/security/: access_control.md  data_protection.md  security_requirements.md
docs/test/: integration_test.md  performance_test.md  test_plan.md  unit_test.md
src/backend/: Cargo.toml
src/backend/migrations/: 20240412000000_initial.sql
src/backend/src/: error.rs  main.rs  websocket.rs
src/backend/src/db/: elements.rs  history.rs  mod.rs  projects.rs  relationships.rs  views.rs
src/backend/src/handlers/: elements.rs  history.rs  mod.rs  projects.rs  relationships.rs  views.rs
src/backend/src/models/: element.rs  history.rs  mod.rs  project.rs  relationship.rs  view.rs
src/frontend/: index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+42 files in other folders)
